<resources>
    <string name="app_name">Вереникин Дмитрий</string>

    <string name="phone_number">Номер телефона</string>
    <string name="e_mail">E-mail</string>
    <string name="vkontakte_profile">Профиль VK</string>
    <string name="github_repository">Репозиторий</string>
    <string name="about">О себе</string>
    <string name="my_profile">Мой профиль</string>
    <string name="my_team">Команда</string>

    <!-- Статистические данные -->
    <string name="rating">Рейтинг</string>
    <string name="number_writed_string">Написано строк кода</string>
    <string name="number_of_projects">Проектов</string>

    <string name="change_profile_photo">Изменить фотографию</string>
    <string name="photo_load_from_gallery">Загрузить из галереи</string>
    <string name="photo_from_camera">Сделать снимок</string>
    <string name="cancel">Отмена</string>
    <string name="chose_photo">Выберите фото</string>

    <string name="auth.hint.e_mail">E-mail</string>
    <string name="auth.hint.pass">Пароль</string>
    <string name="auth.title.input">Войти</string>
    <string name="auth.title.forgot_pass">Забыли пароль?</string>
    <string name="more_info_btn">Просмотр</string>
    <string name="error_user_list_can_not_be_load">Список пользователей не может быть загружен!</string>
    <string name="search_of_user">Поиск пользователя</string>
    <string name="search_hint_enter_user_name">Введите имя пользователя</string>

</resources>
