<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_larger_88"
        android:background="@color/grey_light"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_behavior=".StatisticBehavior">

        <LinearLayout
            android:id="@+id/rating_block"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/statistic_rating"
                style="@style/statistic.numbers"/>

            <TextView
                style="@style/statistic"
                android:text="@string/rating"/>

        </LinearLayout>

        <View
            android:layout_width="@dimen/line_size"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_small_10"
            android:layout_marginTop="@dimen/spacing_small_10"
            android:background="@color/white"/>

        <LinearLayout
            android:id="@+id/lines_code_block"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/statistic_code_lines"
                style="@style/statistic.numbers"/>

            <TextView
                style="@style/statistic"
                android:text="@string/number_writed_string"/>

        </LinearLayout>

        <View
            android:layout_width="@dimen/line_size"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_small_10"
            android:layout_marginTop="@dimen/spacing_small_10"
            android:background="@color/white"/>

        <LinearLayout
            android:id="@+id/project_block"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/statistic_project"
                style="@style/statistic.numbers"/>

            <TextView
                style="@style/statistic"
                android:text="@string/number_of_projects"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_small_8"
        android:layout_marginTop="@dimen/spacing_small_8"
        android:orientation="horizontal">

        <ImageView
            style="@style/icon.left"
            android:src="@drawable/ic_phone_black_24dp"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/size_large_72"
            android:layout_marginLeft="@dimen/spacing_medium_32"
            android:layout_marginRight="@dimen/spacing_medial_24"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/user_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:focusable="false"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey"/>
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/button_call"
            style="@style/icon.right"
            android:src="@drawable/ic_phone_in_talk_black_24dp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_size"
        android:layout_marginLeft="@dimen/size_large_72"
        android:background="@color/grey_light"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_small_8"
        android:layout_marginTop="@dimen/spacing_small_8"
        android:orientation="horizontal">

        <ImageView
            style="@style/icon.left"
            android:src="@drawable/ic_email_black_24dp"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/size_large_72"
            android:layout_marginLeft="@dimen/spacing_medium_32"
            android:layout_marginRight="@dimen/spacing_medial_24"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/user_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:focusable="false"
                    android:hint="@string/e_mail"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey"/>
            </android.support.design.widget.TextInputLayout>


        </LinearLayout>

        <ImageView
            android:id="@+id/button_send_email"
            style="@style/icon.right"
            android:src="@drawable/ic_send_black_24dp"/>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_size"
        android:layout_marginLeft="@dimen/size_large_72"
        android:background="@color/grey_light"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_small_8"
        android:layout_marginTop="@dimen/spacing_small_8"
        android:orientation="horizontal">


        <ImageView
            style="@style/icon.left"
            android:src="@drawable/vk_circle"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/size_large_72"
            android:layout_marginLeft="@dimen/spacing_medium_32"
            android:layout_marginRight="@dimen/spacing_medial_24"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/user_vk"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:focusable="false"
                    android:hint="@string/vkontakte_profile"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey"/>
            </android.support.design.widget.TextInputLayout>


        </LinearLayout>

        <ImageView
            android:id="@+id/button_open_vk"
            style="@style/icon.right"
            android:src="@drawable/ic_visibility_black_24dp"/>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_size"
        android:layout_marginLeft="@dimen/size_large_72"
        android:background="@color/grey_light"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_small_8"
        android:layout_marginTop="@dimen/spacing_small_8"
        android:orientation="horizontal">


        <ImageView
            style="@style/icon.left"
            android:src="@drawable/github_circle"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/size_large_72"
            android:layout_marginLeft="@dimen/spacing_medium_32"
            android:layout_marginRight="@dimen/spacing_medial_24"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/user_git"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:focusable="false"
                    android:hint="@string/github_repozitory"
                    android:inputType="textMultiLine"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey"/>
            </android.support.design.widget.TextInputLayout>


        </LinearLayout>

        <ImageView
            android:id="@+id/button_open_git"
            style="@style/icon.right"
            android:src="@drawable/ic_visibility_black_24dp"/>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_size"
        android:layout_marginLeft="@dimen/size_large_72"
        android:background="@color/grey_light"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_small_8"
        android:layout_marginTop="@dimen/spacing_small_8"
        android:orientation="horizontal">


        <ImageView
            style="@style/icon.left"
            android:src="@drawable/ic_account_circle_gray_24dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spacing_medium_32"
            android:layout_marginRight="@dimen/spacing_medial_24"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/user_bio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:focusable="false"
                    android:hint="@string/about"
                    android:inputType="textMultiLine"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey"/>
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <FrameLayout
            style="@style/icon.right"></FrameLayout>

    </LinearLayout>

</LinearLayout>